hellonode/istio-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "test-service"
  namespace: test
spec:
  hosts:
  - "demo.com"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: "hello-node"
        port:
          number: 8080
